--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
 	</style>
 </head>
 <body class="font-inter">
-	<header>
-		<nav>
-			<img src="./images/Logo.png" alt="">
+	<header class="max-w-[1366px] mx-auto px-4">
+		<nav class="mt-10 flex bg-base-100 flex-col lg:flex-row justify-between items-center gap-y-6">
+			<div class="">
+				<a href="./">
+					<img src="./images/Logo.png" alt="">
+				</a>
+			</div>
+			<div>
+				<a href="" class="btn normal-case text-lg font-medium">Sort by view</a>
+			</div>
+			<div>
+				<a href="./blog.html" class="btn btn-neutral border-none text-white normal-case text-lg bg-[#FF1F3D] px-6">Blog</a>
+			</div>
 		</nav>
+		<div class="divider"></div>
 	</header>
 
 	<main>
