--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 		.font-inter {
 			font-family: 'Inter', sans-serif;
 		}
+
+		.active {
+			color: white;
+			font-weight: 600;
+			font-size: 2em;
+			background-color: #FF1F3D;
+		}
 	</style>
 </head>
 <body class="font-inter">
 	<header class="max-w-[1366px] mx-auto px-4">
-		<nav class="mt-10 flex bg-base-100 flex-col lg:flex-row justify-between items-center gap-y-6">
+		<nav class="mt-10 flex bg-base-100 flex-col md:flex-row justify-between items-center gap-y-6">
 			<div class="">
 				<a href="./">
 					<img src="./images/Logo.png" alt="">
@@ -34,7 +41,17 @@
 		<div class="divider"></div>
 	</header>
 
-	<main>
+	<main class="max-w-[1366px] mx-auto px-4 mb-16">
+		<section>
+			<div class="mb-8 mt-6 flex flex-wrap gap-5 justify-center">
+				<a class="btn normal-case text-base font-medium rounded-md active" href="#">All</a>
+				<a class="btn normal-case text-base font-medium rounded-md" href="#">Music</a>
+				<a class="btn normal-case text-base font-medium rounded-md" href="#">Comedy</a>
+				<a class="btn normal-case text-base font-medium rounded-md" href="#">Drawing</a>
+			</div>
+			<div id="video-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+			</div>
+		</section>
 	</main>
 
 	<script src="./script.js"></script>
